# Geo-Fencing

./: README.md
final-version/: 地理围栏Project实验报告.docx
tools/: draw.py
version1/: CMakeLists.txt  main.cpp
version1/RTree-master/: Test.cpp
version1/yourcode/: JudgePoint.cpp  submit-1AddPolygonBeforeQueryPoint.cpp  submit-1AddPolygonBeforeQueryPoint.h  submit-3AddBeforeQuery.cpp  submit-5MixQueryPolygon.cpp  submit-5MixQueryPolygon.h
version1/上交版本/: CMakeLists.txt  main.cpp
version1/上交版本/yourcode/: JudgePoint.h  Rectangle.cpp  Rectangle.h  submit-1AddPolygonBeforeQueryPoint.cpp  submit-2AddPointBeforeQueryPolygon.cpp  submit-2AddPointBeforeQueryPolygon.h  submit-3AddBeforeQuery.cpp  submit-3AddBeforeQuery.h  submit-4MixQueryPoint.cpp  submit-4MixQueryPoint.h  submit-6MixQuery.cpp  submit-6MixQuery.h
version2/: CMakeLists.txt  kdtree-copy.cpp  kdtree-copy.h  main.cpp
version2/yourcode/: KDTree.cpp  KDTree.h  RTree.h  Rectangle.cpp  Rectangle.h  submit-1AddPolygonBeforeQueryPoint.cpp  submit-1AddPolygonBeforeQueryPoint.h  submit-2AddPointBeforeQueryPolygon.cpp  submit-2AddPointBeforeQueryPolygon.h  submit-3AddBeforeQuery.cpp  submit-3AddBeforeQuery.h  submit-4MixQueryPoint.cpp  submit-4MixQueryPoint.h  submit-5MixQueryPolygon.cpp  submit-5MixQueryPolygon.h  submit-6MixQuery.cpp  submit-6MixQuery.h
version3/: CMakeLists.txt  build.sh  main.cpp
version3/yourcode/: GridPoint.cpp  GridPoint.h  global.cpp  global.h  submit-1AddPolygonBeforeQueryPoint.cpp  submit-1AddPolygonBeforeQueryPoint.h  submit-2AddPointBeforeQueryPolygon.cpp  submit-3AddBeforeQuery.cpp  (+8 more)
